--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.notes_flutter">
-   <application
+   <application   
         android:label="notes_flutter"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
@@ -30,5 +30,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+        <!-- <uses-permission android:name="android.permission.INTERNET"/>     -->
     </application>
 </manifest>
